--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
 
 body {
-    background-color: #34495e;
+    background: rgb(180,230,117);
+    background: linear-gradient(45deg, rgba(180,230,117,1) 0%, rgba(0,212,255,1) 100%);
+    background-repeat: no-repeat;
+    
+    height: 100vh;
     color: white;
     margin: 0;
     padding: 0;
@@ -19,7 +24,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: 'Pacifico', cursive;
+    font-family: 'Roboto Slab', serif;
+    color:midnightblue ;
 }
 
 .heading h1 {
@@ -61,8 +67,8 @@ p {
     align-items: center;
     font-size: 3rem;
     font-family: 'Permanent Marker', cursive;
-    box-shadow: 0px 0px 37px 8px #ffffff9e;
-    background-color: slategray;
+    /* box-shadow: 0px 0px 37px 8px #ffffff9e; */
+    background-color: rgba(203, 225, 247, 0.651);
     transition: all 300ms;
 
 }
@@ -101,8 +107,9 @@ p {
 }
 
 #player {
-    color: #2ecc71;
+    color: #ff0000;
     font-family: 'Courgette', cursive;
+    /* font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
     font-size: 60px;
 }
 
